2005-03-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpviewrenderergradient.c: 
	(gimp_view_renderer_gradient_render): Make sure specified
	point lies within specified gradient segment; should
	fix bug #167604.

2005-03-08  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c (file_open_layer): open images interactively.
	Fixes bug #168936.

2005-03-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppaintoptions-gui.c (fade_options_gui)
	(gradient_options_gui)
	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
	call gimp_unit_menu_set_pixel_digits() after connecting up the
	spinbuttons and the unitmenu. Fixes initial display (bug #169066).

2005-03-08  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette.[ch]: renamed gimp_palette_[gs]et_n_columns
	to gimp_palette_[gs]et_num_columns().

	* app/dialogs/palette-import-dialog.c
	* app/widgets/gimppaletteeditor.c: changed accordingly.

	* tools/pdbgen/pdb/palette.pdb: added new PDB function to control
	the number of columns used when displaying a palette (bug #169370).

	* app/pdb/internal_procs.c
	* app/pdb/palette_cmds.c
	* libgimp/gimppalette_pdb.[ch]: regenerated.

	* libgimp/gimp.def: updated.

2005-03-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.c (gimp_curves_tool_dialog)
	* app/tools/gimplevelstool.c (gimp_levels_tool_dialog): added
	mnemonics for the Channels menu.

2005-03-07  Manish Singh  <yosh@gimp.org>

	* plug-ins/metadata/interface.c
	* plug-ins/metadata/xmp-model.c: fix some gssize confusion.

2005-03-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpellipseselecttool.c

	* app/tools/gimprectselecttool.[ch]: applied a patch by Nils
	Bjorklund that should fix bug #143887 (selection rectangle "moves"
	when starting at the top-right corner).

2005-03-07  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/perspective-shadow.scm: Reverting previous
	change as I was mixing up two different versions of GIMP at the time.
